[package]
name = "webrtc-sctp"
version = "0.0.0"
authors = ["David Simmons <simmons@davidsimmons.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/simmons/webrtc-sctp"
keywords = ["webrtc", "sctp" ]
categories = ["network-programming"]
description = "A pure-Rust userspace SCTP implementation"
readme = "README.md"
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
nom = "5"
crc = "1"
bytes = "0.5"
futures = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-timer= "0.2"
rand = "0.7"
blake2 = "0.8"
digest = "0.8"
byteorder = "1"
log = "0.4"

[dev-dependencies]
env_logger = "0.7"
rand_xorshift = "0.2"
